--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,19 +20,35 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="181dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="136dp"
+        android:layout_height="118dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="60dp"
         android:text="@string/delivery" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="177dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="220dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="136dp"
+        android:layout_height="116dp"
+        android:layout_marginStart="230dp"
+        android:layout_marginTop="60dp"
         android:text="@string/pick_up" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="138dp"
+        android:layout_height="112dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="180dp"
+        android:text="fast food" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="138dp"
+        android:layout_height="112dp"
+        android:layout_marginStart="230dp"
+        android:layout_marginTop="180dp"
+        android:text="restaurant" />
 
     <TextView
         android:id="@+id/textView2"
@@ -46,12 +62,12 @@
         android:textSize="30sp" />
 
     <ScrollView
-        android:layout_width="417dp"
-        android:layout_height="584dp"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="350dp"
-        android:layout_marginEnd="56dp">
+        android:layout_marginEnd="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -101,10 +117,10 @@
 
             <ImageView
                 android:id="@+id/imageView4"
-                android:layout_width="246dp"
-                android:layout_height="169dp"
-                android:src="@drawable/subway_logo_2002"
-                android:contentDescription="TODO" />
+                android:layout_width="match_parent"
+                android:layout_height="168dp"
+                android:contentDescription="TODO"
+                android:src="@drawable/subway_logo_2002" />
 
             <EditText
                 android:id="@+id/arbor"
@@ -124,8 +140,8 @@
 
             <ImageView
                 android:id="@+id/imageView5"
-                android:layout_width="362dp"
-                android:layout_height="326dp"
+                android:layout_width="match_parent"
+                android:layout_height="333dp"
                 android:src="@drawable/arborgrill_008_jpg" />
 
             <EditText
