--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,11 +9,11 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/homeFragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/homeNavBar" />
+        app:layout_constraintBottom_toTopOf="@id/homeNavBar" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/homeNavBar"
