--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,212 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".HomeFragment">
 
     <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="serif"
         android:text="@string/welcome"
-        android:textColor="#000"
-        android:textSize="30sp" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="136dp"
-        android:layout_height="118dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="60dp"
-        android:text="@string/delivery" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="136dp"
-        android:layout_height="116dp"
-        android:layout_marginStart="230dp"
-        android:layout_marginTop="60dp"
-        android:text="@string/pick_up" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="138dp"
-        android:layout_height="112dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="180dp"
-        android:text="fast food" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="138dp"
-        android:layout_height="112dp"
-        android:layout_marginStart="230dp"
-        android:layout_marginTop="180dp"
-        android:text="restaurant" />
+        android:textColor="@color/black"
+        android:textSize="35sp" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginHorizontal="16dp"
+        android:fontFamily="serif"
+        android:text="@string/sort_suggestions_by"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:orientation="horizontal"
+        android:weightSum="4" >
+
+        <Button
+            android:id="@+id/homeSortDelivery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
+            android:layout_weight="2"
+            android:text="@string/delivery" />
+
+        <Button
+            android:id="@+id/homeSortPickUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
+            android:layout_weight="2"
+            android:text="@string/pick_up" />
+
+        <!--
+        <Button
+            android:id="@+id/homeSortFastFood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
+            android:layout_weight="2"
+            android:text="@string/fast_food" />
+
+        <Button
+            android:id="@+id/homeSortRestaurant"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
+            android:layout_weight="2"
+            android:text="@string/restaurant" />
+            -->
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="serif"
         android:text="@string/suggestions"
-        android:textColor="#000000"
-        android:textSize="30sp" />
+        android:textColor="@color/black"
+        android:textSize="28sp" />
 
     <ScrollView
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="350dp"
-        android:layout_marginEnd="1dp">
+        android:layout_marginHorizontal="16dp" >
 
         <LinearLayout
+            android:id="@+id/homeSVLinear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical" >
 
-            <ImageView
-                android:id="@+id/imageView2"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="-60dp" />
-                <!--
-                android:src="@drawable/panda_express_gluten_free_menu" />
-                -->
+                android:paddingBottom="30dp"
+                android:orientation="vertical" >
 
-            <EditText
-                android:id="@+id/paanndaa"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="-370dp"
-                android:autofillHints=""
-                android:backgroundTint="@color/black"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:minHeight="48dp"
-                android:text="@string/pandaaa"
-                android:textColor="#100F0F"
-                android:textColorHint="#131313" />
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:src="@drawable/panda_express_gluten_free_menu"
+                    android:scaleType="centerCrop"
+                    android:adjustViewBounds="true" />
 
-            <EditText
-                android:id="@+id/subway"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="250dp"
-                android:autofillHints=""
-                android:backgroundTint="@color/black"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:minHeight="48dp"
-                android:text="@string/subway"
-                android:textColor="#100F0F"
-                android:textColorHighlight="@color/black"
-                android:textColorHint="#131313"
-                android:textColorLink="@color/black"
-                tools:ignore="SpeakableTextPresentCheck" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Restaurant A"
+                    android:textColor="@color/black"
+                    android:textSize="24sp" />
 
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="match_parent"
-                android:layout_height="168dp"
-                android:contentDescription="TODO" />
-                <!--
-                android:src="@drawable/subway_logo_2002" />
-                -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="7" >
 
-            <EditText
-                android:id="@+id/arbor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="-0dp"
-                android:autofillHints=""
-                android:backgroundTint="@color/black"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:minHeight="48dp"
-                android:text="@string/arbor"
-                android:textColor="#100F0F"
-                android:textColorHint="#131313"
-                tools:ignore="SpeakableTextPresentCheck" />
+                    <TextView
+                        android:layout_weight="2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="5.0 mi"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
+                        android:textAlignment="textStart" />
 
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="match_parent"
-                android:layout_height="333dp" />
-                <!--
-                android:src="@drawable/arborgrill_008_jpg" />
-                -->
+                    <TextView
+                        android:layout_weight="5"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Delivery &amp; Pick Up"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
+                        android:textAlignment="textEnd" />
+                </LinearLayout>
 
-            <EditText
-                android:id="@+id/fruedian"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="-0dp"
-                android:autofillHints=""
-                android:backgroundTint="@color/black"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:minHeight="48dp"
-                android:text="@string/fruedian"
-                android:textColor="#100F0F"
-                android:textColorHint="#131313"
-                tools:ignore="DuplicateIds,SpeakableTextPresentCheck" />
-
-            <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-                <!--
-                android:src="@drawable/freud_logo" />
-                -->
-
-            <EditText
-                android:id="@+id/mcdonalds"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="-0dp"
-                android:autofillHints=""
-                android:backgroundTint="@color/black"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:minHeight="48dp"
-                android:text="@string/mcdonalds"
-                android:textColor="#100F0F"
-                android:textColorHint="#131313"
-                tools:ignore="SpeakableTextPresentCheck" />
-
-            <EditText
-                android:id="@+id/burger"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="10dp"
-                android:autofillHints=""
-                android:backgroundTint="@color/black"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:minHeight="48dp"
-                android:text="@string/burger"
-                android:textColor="#100F0F"
-                android:textColorHint="#131313"
-                tools:ignore="InvalidId,SpeakableTextPresentCheck" />
-
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Eggs\nSalad\nWater"
+                    android:textColor="@color/black"
+                    android:textStyle="italic"
+                    android:textSize="18sp"
+                    android:textAlignment="center" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
-</RelativeLayout>
+</LinearLayout>
